# evm_pipeline

./: .env.example  LICENSE  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
cdk.out/: EvmPipelineLambda.assets.json  EvmPipelineLambda.template.json  EvmPipelineOrchestration.assets.json  EvmPipelineOrchestration.template.json  EvmPipelineStorage.assets.json  EvmPipelineStorage.template.json  manifest.json  tree.json
cdk.out/asset.aa8230aa6b325c3cdeab9b6df364edd67b266ceec740d2321998e350ea5e3edc/fetch_latest_block/: requirements.txt
cdk.out/asset.aa8230aa6b325c3cdeab9b6df364edd67b266ceec740d2321998e350ea5e3edc/shared/: delta_lake_utils.py  etherscan_client.py
cdk.out/asset.b2d7ac2c2680b1bb2dd793ac1e14e280282f28344b96a713204f2eb56449e1d9/decode_data/: requirements.txt
cdk.out/asset.b2d7ac2c2680b1bb2dd793ac1e14e280282f28344b96a713204f2eb56449e1d9/fetch_latest_block/: Dockerfile
cdk.out/asset.b2d7ac2c2680b1bb2dd793ac1e14e280282f28344b96a713204f2eb56449e1d9/shared/: __init__.py  abi_decoder.py
cdk.out/asset.b2d7ac2c2680b1bb2dd793ac1e14e280282f28344b96a713204f2eb56449e1d9/sync_raw_data/: Dockerfile
cdk.out/asset.bcff510740bd16895d038b24dfc61ab279cb978608b94ea99a2cd74bd02e3726/decode_data/: handler.py
lambdas/decode_data/: Dockerfile
lambdas/fetch_latest_block/: handler.py
lambdas/sync_raw_data/: requirements.txt
stacks/: __init__.py  lambda_stack.py  orchestration_stack.py  storage_stack.py
tests/: conftest.py  test_localstack_integration.py  test_stacks.py
(+2 files in other folders)
